Sprint 1: case creation, validation, and blob persistence

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-tash\ drop 
 # secrets
 .env
 
 # python
+.venv/
 __pycache__/
 *.pyc
 
-# local junk
-tash drop
+# OS / editor junk
+.DS_Store
+Thumbs.db
