--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
 azure-core==1.38.0
+azure-search-documents==11.6.0
 azure-storage-blob==12.28.0
 certifi==2026.1.4
 cffi==2.0.0
@@ -14,6 +15,7 @@ fastapi==0.128.0
 h11==0.16.0
 idna==3.11
 isodate==0.7.2
+openai==1.68.2
 pycparser==2.23
 pydantic==2.12.5
 pydantic-settings==2.12.0
